# metora-file

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  main.py  templating.py
app/admin/: dependencies.py  router.py
app/db/: mongodb.py
app/models/: __init__.py  api_token.py  audit_log.py  bucket.py  enums.py  object_relation.py  object_version.py  share_link.py  stored_object.py
app/modules/audit/: service.py
app/modules/auth/: api.py  dependencies.py  security.py  service.py
app/modules/buckets/: api.py  service.py
app/modules/objects/: api.py  service.py
app/modules/relations/: api.py  service.py
app/modules/share_links/: api.py  service.py
app/share/: router.py
app/static/css/: admin.css
app/static/js/: admin.js
app/storage/: __init__.py  base.py  factory.py  local.py  minio.py  signing.py
app/templates/: base.html
app/templates/admin/: dashboard.html
app/templates/admin/api_tokens/: created.html  list.html  new.html
app/templates/admin/buckets/: detail.html  list.html  new.html
app/templates/admin/objects/: detail.html  list.html
app/templates/admin/share_links/: list.html  new.html
app/templates/share/: private.html  public.html  verified.html
metora_file.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_smoke.py
