[project]
name = "metora-file"
version = "0.1.0"
description = "FileService: MongoDB + Beanie metadata store, MinIO object storage, FastAPI REST API and admin UI."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Metora Team" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "beanie>=1.26",
    "motor>=3.4",
    "pydantic-settings>=2.2",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "minio>=7.2",
    "bcrypt>=4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
